# orderbuddy-main

./: .gitignore  README.md
python-backend-demo/: .gitignore  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SUBMISSION_REPORT.md  pyproject.toml
python-backend-demo/app/: __init__.py  config.py  dependencies.py  main.py
python-backend-demo/app/api/v1/: api.py
python-backend-demo/app/api/v1/endpoints/: auth.py  campaign.py  menu.py  order.py  order_app.py  origins.py  payments.py  printers.py  report.py  restaurant.py  stations.py  users.py
python-backend-demo/app/core/: constants.py  database.py  exceptions.py  logging.py  socketio.py  supertokens.py  transformers.py
python-backend-demo/app/models/domain/: __init__.py  menu.py
python-backend-demo/app/models/schemas/: __init__.py  menu.py  order.py  response.py  restaurant.py
python-backend-demo/app/repositories/: menu_repository.py  order_repository.py  restaurant_repository.py
python-backend-demo/app/services/: menu_service.py  order_service.py  restaurant_service.py
python-backend-demo/docs/: ARCHITECTURE_ANALYSIS.md  MIGRATION_GUIDE.md  TECHNICAL_ASSESSMENT_SUMMARY.md
python-backend-demo/tests/: __init__.py  conftest.py
python-backend-demo/tests/integration/: test_menu_api.py
python-backend-demo/tests/unit/: test_menu_service.py
src/api/: package-lock.json  package.json  webpack.config.js
src/api/src/: app.module.ts  main.ts
src/api/src/ai/: job.service.ts
src/api/src/campaign/: campaign.service.ts
src/api/src/config/: config.module.ts
src/order/: package-lock.json
(+26 files in other folders)
